# sitegen

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs  markdown_meta.rs
web/: Cargo.toml  Trunk.toml  gensite.sh  index.css  index.html
web/content/: hello.json  test.md
web/src/: main.rs
web/src/components/: archive_view.rs  card.rs  error_view.rs  home_view.rs  loading_view.rs  mod.rs  page.rs  post_view.rs  search_view.rs  topic_card.rs
