[package]
name = "sitegen"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
gloo-net = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen-futures = "0.4.56"
web-sys = {version = "0.3.83",features=["HtmlCanvasElement","WebGlBuffer","WebGlProgram","WebGlRenderingContext","WebGlShader","WebGlUniformLocation"]}
yew = { version = "0.22.0", features = ["csr", "serde"] }
